Fix: Different heights of items in columns

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="row header">
-          <div class="col">ABIs</div>
+          <div class="col ">ABIs</div>
           <div class="col">Locales</div>
           <div class="col">Screen Density</div>
           <div class="col">SDK Version</div>
@@ -39,19 +39,20 @@
 
         <div class="row">
           <!-- Supported ABIs Column -->
-          <div class="col-3 row abi-container">
+          <div class="col-3 abi-container">
+            
           </div>
 
           <!-- Supported Locales Column -->
-          <div class="col-3 row locale-container">
+          <div class="col-3 locale-container">
           </div>
 
           <!-- Screen Density Column -->
-          <div class="col-3 row density-container">
+          <div class="col-3 density-container">
           </div>
 
           <!-- SDK Version Column -->
-          <div class="col-3 row sdk-container">
+          <div class="col-3 sdk-container">
           </div>
         </div>
       </div>
