--- a/index.html
+++ b/index.html
@@ -54,10 +54,17 @@
           <div class="col-3 sdk-container">
           </div>
         </div>
+        <button type="button" id="generateButton" class="col-12 btn btn-outline-primary">Generate</button>
       </div>
       <div class="col-4 code-area">
         <pre><code class="language-json"></code></pre>
       </div>
+    </div>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      Incomplete info.
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
   </div>
 
