--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <button type="button" id="generateButton" class="col-12 btn btn-outline-primary">Generate</button>
       </div>
       <div class="col-4 code-area">
-        <pre><code class="language-json"></code></pre>
+        <pre><code class="language-json" id="generated-json"></code></pre>
       </div>
     </div>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
