Updated README and json keys

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
+    <div class="fixed-bottom text-center credits">
+      Made with 💙by <a href="https://github.com/nikhilbansal97" class="badge badge-primary">Nikhil</a>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
