--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </button>
     </div>
     <div class="fixed-bottom text-center credits">
-      Made with 💙by <a href="https://github.com/nikhilbansal97" class="badge badge-primary">Nikhil</a>
+      Made with 💙& ☕️ by <a href="https://github.com/nikhilbansal97" class="badge badge-primary">Nikhil</a>
     </div>
   </div>
 
